--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: orgchaos
+  pool: 5
+  username: myapp
+  password: password1
+  #<<: *default
+  #database: db/production.sqlite3
